# application-fusion

./: .pylintrc  Procfile  manage.py  pyproject.toml  requirements.txt
core/: forms.py  models.py  views.py
core/migrations/: 0001_initial.py
core/templates/: base.html  contact.html  hero.html  index.html  servicos.html  team.html  testimonial.html
fusion/: settings.py  urls.py  wsgi.py
globalneti/: asgi.py  settings.py  urls.py  wsgi.py
