[tool.poetry]
name = "globalneti"
version = "0.1.0"
description = ""
authors = ["Bruno Salvador <brunosalvador145@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
